pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference27.pkl
import "pkl:ref"

class D extends ref.Domain {
  function renderReference(_): String = throw("not implemented")
}

class Holder {
  func: (Int) -> Boolean
}

local myRef = ref.Reference(new D {}, Holder, null).func

res = myRef.name
